--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ services:
   - mongodb
   - redis-sever
 env:
-  - NODE_ENV=ci
-  - PORT=3000
+  - NODE_ENV=ci PORT=3000
 cache:
   directories:
     - node_modules
